--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@ body{
     width: 40px;
     height: 40px;
 }
+.nav-item {
+    padding-left: 40px;
+    padding-right: 40px;
+    
+}
 .header h1{
     text-align: center;
     margin-top: 20px;
